fixed spacing of aside

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ aside {
     height: 97%;
     padding: 12px;
     position: fixed;
-    border-right: solid rgb(200, 200, 200) 1.5px;
+    border-right: solid rgb(218, 218, 218) 1.5px;
     border-style: border-box;
 }
 
@@ -41,14 +41,14 @@ aside {
 }
 
 .logo {
-    padding: 12px;
+    padding: 24px 0px 24px 12px;
 }
 
 
 aside li {
     margin: 6px 0px;
     list-style: none;
-    padding: 10px;
+    padding: 14px 0px 14px 12px;
 }
 
 aside li:hover {
